Added codegen coommand in root package.json for ease of use

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dev_up_build": "bash ./scripts/dev_up_build.sh",
     "dev_down": "bash ./scripts/dev_down.sh",
     "code_coverage": "bash ./scripts/code_coverage.sh",
-    "dev": "npm --prefix ./frontend run dev"
+    "dev": "npm --prefix ./frontend run dev",
+    "codegen": "npm --prefix ./frontend run generate"
   },
   "repository": {
     "type": "git",
