--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -16,7 +16,7 @@
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
-    "verbatimModuleSyntax": false,
+    "verbatimModuleSyntax": true,
     "moduleDetection": "force",
     "noEmit": true,
     "jsx": "react-jsx",
@@ -43,7 +43,4 @@
     "src",
     "codegen.ts"
   ],
-  "exclude": [
-    "src/generated/**/*"
-  ]
 }
