--- a/frontend/tsconfig.node.json
+++ b/frontend/tsconfig.node.json
@@ -11,7 +11,7 @@
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
-    "verbatimModuleSyntax": false,
+    "verbatimModuleSyntax": true,
     "moduleDetection": "force",
     "noEmit": true,
     /* Linting */
@@ -32,7 +32,4 @@
     "vite.config.ts",
     "codegen.ts"
   ],
-  "exclude": [
-    "src/generated/**/*"
-  ]
 }
