--- a/.github/workflows/push-main-frontend.yml
+++ b/.github/workflows/push-main-frontend.yml
@@ -4,9 +4,10 @@ on:
   push:
     branches:
       - main
-    paths:
-      - "frontend/**"
-      - ".github/workflows/push-main-frontend.yml"
+      - dev/*
+    # paths:
+    #   - "frontend/**"
+    #   - ".github/workflows/push-main-frontend.yml"
   workflow_dispatch:
 
 jobs:
@@ -20,23 +21,23 @@ jobs:
       - name: Run a Simple Command
         run: echo "This is a test job for push main."
 
-  build-frontend-image:
-    name: CI Docker Build and Push Frontend Docker Image
-    needs: test
-    uses: ./.github/workflows/ci-docker-builder-frontend.yml
-    permissions:
-      contents: read
-      packages: write
+  # build-frontend-image:
+  #   name: CI Docker Build and Push Frontend Docker Image
+  #   needs: test
+  #   uses: ./.github/workflows/ci-docker-builder-frontend.yml
+  #   permissions:
+  #     contents: read
+  #     packages: write
 
-  deploy-frontend:
-    name: Deploy Frontend Application
-    needs: build-frontend-image
-    uses: ./.github/workflows/deploy-frontend.yml
-    secrets:
-      BREZOR_DEPLOY_HOOK: ${{ secrets.BREZOR_DEPLOY_HOOK }}
-      REX_RENDER_DEPLOY_HOOK: ${{ secrets.REX_RENDER_DEPLOY_HOOK }}
+  # deploy-frontend:
+  #   name: Deploy Frontend Application
+  #   needs: build-frontend-image
+  #   uses: ./.github/workflows/deploy-frontend.yml
+  #   secrets:
+  #     BREZOR_DEPLOY_HOOK: ${{ secrets.BREZOR_DEPLOY_HOOK }}
+  #     REX_RENDER_DEPLOY_HOOK: ${{ secrets.REX_RENDER_DEPLOY_HOOK }}
 
   E2E-Tests:
     name: E2E Tests Workflow
-    needs: deploy-frontend
+    # needs: deploy-frontend
     uses: ./.github/workflows/e2e-tests.yml
