--- a/scripts/docker-compose.test.yml
+++ b/scripts/docker-compose.test.yml
@@ -1,5 +1,6 @@
 services:
   testdb:
+    container_name: testdb
     image: mysql:8
     environment:
       MYSQL_DATABASE: testdb
@@ -9,3 +10,9 @@ services:
       MySqlConnectionString_test: server=localhost;port=3308;database=testdb;user=testuser;password=testpass
     ports:
       - "3308:3306"
+    healthcheck:
+      test:
+        ["CMD-SHELL", "mysqladmin ping -h localhost -u healthcheck --silent"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
