--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -41,7 +41,7 @@ jobs:
         working-directory: e2e-playwright-tests/PlaywrightTests
         env:
           FRONTEND_HOST: ${{ vars.FRONTEND_HOST }}
-          TEST_USER_EMAIL: ${{ inputs.TEST_USER_EMAIL }}
+          TEST_USER_EMAIL: ${{ inputs.TEST_USER_EMAIL || vars.TEST_USER_EMAIL }}
         run: |
           dotnet test --logger "trx;LogFileName=e2e_results.trx" -e FRONTEND_HOST="$FRONTEND_HOST" -e TEST_USER_EMAIL="$TEST_USER_EMAIL"
 
