--- a/docs/pdf/Unit testing and integration testing/unit.tests/unit.tests.csproj
+++ b/docs/pdf/Unit testing and integration testing/unit.tests/unit.tests.csproj
@@ -21,6 +21,8 @@
     <PackageReference Include="NUnit" Version="4.2.2" />
     <PackageReference Include="NUnit.Analyzers" Version="4.4.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.10" />
   </ItemGroup>
 
   <ItemGroup>
