Update workflows to trigger on exam/Rasho branch and comment out path filters

--- a/.github/workflows/push-main-frontend.yml
+++ b/.github/workflows/push-main-frontend.yml
@@ -4,9 +4,10 @@ on:
   push:
     branches:
       - main
-    paths:
-      - "frontend/**"
-      - ".github/workflows/push-main-frontend.yml"
+      - exam/Rasho
+    # paths:
+    #   - "frontend/**"
+    #   - ".github/workflows/push-main-frontend.yml"
   workflow_dispatch:
     inputs:
       TEST_USER_EMAIL:
