--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@auth0/auth0-react": "^2.9.0",
     "@chakra-ui/react": "^3.27.0",
     "@emotion/react": "^11.14.0",
+    "@sentry/react": "^10.31.0",
     "graphql": "^16.12.0",
     "jwt-decode": "^4.0.0",
     "next-themes": "^0.4.6",
