--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -44,6 +44,10 @@ services:
       MySqlConnectionString: ${MySqlConnectionString}
       MongoDbConnectionString: ${MongoDbConnectionString}
       MongoDbDatabase: ${MongoDbDatabase}
+      
+      NEO4J_URI: ${NEO4J_URI}
+      NEO4J_USER: ${NEO4J_USER}
+      NEO4J_PASSWORD: ${NEO4J_PASSWORD}
       DATA_ROOT: /mySql
     volumes:
       - ./SeedData/SeedData/mySql:/mySql
